ALbIngressController/ALBIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress
  labels:
    app: alb-ingress-controller
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing   #mention type
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/vpc-id: vpc-0c117fbf76c08040a
    alb.ingress.kubernetes.io/subnets: subn*t-07856c9*82bb0f35f,subnet-04221ff2b*a182*b6,subnet-005514128c8b83*38  # Replace with your subnet IDs
spec:
  rules:
    - http:
        paths:
          - path: /same_path_asin_service
            pathType: Prefix
            backend:
              service:
                name: nginx-service-nodeport
                port:
                  number: 80
          - path: /same_path_asin_service
            pathType: Prefix
            backend:
              service:
                name: apache-service-nodeport
                port:
                  number: 80
